--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,7 @@ dependencies {
     compile 'com.android.support:cardview-v7:25.1.1'
     compile 'com.android.support:design:25.1.1'
     compile 'com.google.firebase:firebase-messaging:9.6.1'
+    compile 'com.google.firebase:firebase-database:9.6.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
